// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with plural expenses 1`] = `
<div>
  <h1>
    Currently Viewing 
    2
     
    expenses
     totaling 
    $53,254,523.45
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with singular expense 1`] = `
<div>
  <h1>
    Currently Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
